<resources>
    <string name="app_name">bookmoth_library</string>
    <string name="general_submit">Xác nhận</string>
    <string name="general_cancel">Huỷ bỏ</string>
    <string name="general_areyousure">Bạn chắc chắn với hành động này chứ?</string>
    <string name="general_price">Điểm giá</string>
    <string name="mainnav_thuvien">Thư viện</string>
    <string name="libmode_toAuthor">Viết tác phẩm</string>
    <string name="libmode_toReader">Đọc tác phẩm</string>
    <string name="libmode_title_author">TRANG TÁC GIẢ</string>
    <string name="libmode_title_reader">THƯ VIỆN ĐỌC</string>
    <string name="liblabel_work_detail">Tác phẩm</string>
    <string name="chapter_chapter">Chương </string>
    <string name="contentselection_discuss">Trích dẫn</string>
    <string name="contentselection_search">Tìm kiếm</string>
    <string name="contentselection_report">Báo cáo</string>
    <string name="reader_nextchapter_none">Hiện không có chương tiếp theo</string>
    <string name="reader_nextchapter_done">Đang xem chương </string>
    <string name="reader_prevchapter_none">Đã đến chương đầu tiên</string>
    <string name="reader_prevchapter_done">Đang quay lại chương </string>
    <string name="reader_loadchaper">Đang tải chương</string>
    <string name="color_white">Trắng</string>
    <string name="color_black">Đen</string>
    <string name="color_ink">Xanh mực</string>
    <string name="color_light">Sáng</string>
    <string name="color_amoled">AMOLED</string>
    <string name="color_paper">Giấy vàng</string>
    <string name="button_addchapter_label">Chương mới</string>
    <string name="button_addwork_label">Tác phẩm mới</string>
    <string name="button_deletework_label">Xoá tác phẩm</string>
    <string name="button_editwork_label">Sửa thông tin</string>
    <string name="addwork_ui_title">Thêm tác phẩm mới</string>
    <string name="work_input_title">Tiêu đề của tác phẩm *</string>
    <string name="work_input_title_error_blank">Tiêu đề không để trống</string>
    <string name="work_input_pricing">Số điểm dùng đọc *</string>
    <string name="work_input_pricing_warning_defaultprice">Để trống sẽ đặt số điểm là 0</string>
    <string name="work_input_description">Mô tả tác phẩm</string>
    <string name="work_button_addcover">Thêm ảnh bìa</string>
    <string name="addwork_ui_headerguide">Hãy bắt đầu câu chuyện của bạn!\nLưu ý rằng các trường dấu * là bắt buộc!</string>
    <string name="addwork_ui_footerguide">Bạn có thể thêm chương sau khi đã tạo tác phẩm</string>
    <string name="addwork_confirm_title">Xác nhận thông tin</string>
    <string name="addwork_confirm_clarify">Bạn đang thực hiện tạo tác phẩm mới với thông tin như dưới</string>
    <string name="addwork_res_success">Thêm tác phẩm mới thành công</string>
    <string name="addwork_res_failed">Thêm tác phẩm mới thất bại</string>
    <string name="addchapter_ui_title">Thêm chương mới</string>
    <string name="addchapter_ui_guide_whenaddtowork">Chương mới sẽ được thêm vào tác phẩm với vị trí của chương mới nhất</string>
    <string name="addchapter_input_forwork">Tác phẩm sẽ thêm chương mới *</string>
    <string name="addchapter_input_forwork_error_notfound">Hãy chọn tác phẩm có trong danh sách</string>
    <string name="addchapter_ui_guide_chapterinfos">Hãy nhập nội dung chương tại đây</string>
    <string name="addchapter_input_title">Tiêu đề chương</string>
    <string name="addchapter_button_addcontent">Thêm nội dung *</string>
    <string name="addchapter_input_addcontent_error_notfound">Phải có nội dung</string>
    <string name="addchapter_ui_guide_supportedfiletype">Hỗ trợ tệp .docx, .txt, .md</string>
    <string name="addchapter_res_success">Thêm chương mới thành công</string>
    <string name="addchapter_res_failed">Thêm chương mới thất bại</string>
    <string name="workdash_ui_title">Thông tin tác phẩm</string>
    <string name="workdash_ui_viewcount">Tổng lượt xem</string>
    <string name="workdash_ui_followcount">Lượt theo dõi</string>
    <string name="workdash_ui_lastupdate">Cập nhật cuối</string>
    <string name="workdash_ui_price">Giá hiện tại</string>
    <string name="remwork_confirm_title">Xoá tác phẩm</string>
    <string name="remwork_confirm_clarify">Hành động này sẽ khiến tất cả dữ liệu liên quan (gồm các chương, lượt xem, nội dung,...) bị xoá khỏi máy chủ</string>
    <string name="remwork_res_success">Xoá tác phẩm thành công</string>
    <string name="remwork_res_failed">Xoá tác phẩm thất bại</string>
    <string name="updatework_ui_title">Sửa thông tin tác phẩm</string>
    <string name="updatework_res_success">Sửa tác phẩm thành công</string>
    <string name="updatework_res_failed">Sửa tác phẩm thất bại</string>
    <string name="updatework_confirm_clarify">Bạn đang thực hiện sửa tác phẩm. Tổng thể thông tin tác phẩm sẽ được cập nhật như dưới</string>
    <string name="button_readchapter_label">Đọc chương</string>
    <string name="button_deletechapter_label">Xoá chương</string>
    <string name="button_editchapter_label">Sửa chương</string>
    <string name="remchap_confirm_title">Xoá chương</string>
    <string name="remchap_confirm_clarify">Hành động này sẽ khiến chương và nội dung chương bị xoá khỏi máy chủ</string>
    <string name="remchap_res_success">Xoá chươnng thành công</string>
    <string name="remchap_res_failed">Xoá chương thất bại</string>
    <string name="updatechapter_ui_title">Sửa chương</string>
    <string name="updatechapter_input_title">Tiêu đề chương</string>
    <string name="updatechapter_button_addcontent">Thay nội dung</string>
    <string name="updatechapter_ui_guide_supportedfiletype">Hỗ trợ tệp .docx, .txt, .md</string>
    <string name="updatechapter_res_success">Sửa chương thành công</string>
    <string name="updatechapter_res_failed">Sửa chương thất bại</string>
    <string name="updatechapter_confirm_title">Sửa chương</string>
    <string name="updatechapter_confirm_clarify">Trong trường hợp sửa nội dung chương, thông tin của chương sẽ được cập nhật</string>
</resources>