<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="32dp">

    <TextView
        android:id="@+id/wdchapter_tv_toolbartitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="selected chapter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="32dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/wdchapter_fl_readchapter"
        app:layout_constraintEnd_toEndOf="@+id/wdchapter_fl_readchapter"
        app:layout_constraintStart_toStartOf="@+id/wdchapter_fl_readchapter"
        app:layout_constraintTop_toTopOf="@+id/wdchapter_fl_readchapter">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_chrome_reader_mode_24"
            app:tint="@color/general" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:text="@string/button_readchapter_label"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/wdchapter_fl_deletechapter"
        app:layout_constraintEnd_toEndOf="@id/wdchapter_fl_deletechapter"
        app:layout_constraintStart_toStartOf="@id/wdchapter_fl_deletechapter"
        app:layout_constraintTop_toTopOf="@+id/wdchapter_fl_deletechapter">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_delete_forever_24"
            app:tint="@color/general" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:text="@string/button_deletechapter_label"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/wdchapter_fl_editchapter"
        app:layout_constraintEnd_toEndOf="@+id/wdchapter_fl_editchapter"
        app:layout_constraintStart_toEndOf="@id/constraintLayout1"
        app:layout_constraintStart_toStartOf="@+id/wdchapter_fl_editchapter"
        app:layout_constraintTop_toTopOf="@+id/wdchapter_fl_editchapter">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_edit_square_24"
            app:tint="@color/general" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:text="@string/button_editchapter_label"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/wdchapter_fl_readchapter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wdchapter_fl_deletechapter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wdchapter_tv_toolbartitle" />

    <FrameLayout
        android:id="@+id/wdchapter_fl_deletechapter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/wdchapter_fl_readchapter"
        app:layout_constraintEnd_toStartOf="@id/wdchapter_fl_editchapter"
        app:layout_constraintStart_toEndOf="@id/wdchapter_fl_readchapter"
        app:layout_constraintTop_toTopOf="@id/wdchapter_fl_readchapter" />

    <FrameLayout
        android:id="@+id/wdchapter_fl_editchapter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/wdchapter_fl_readchapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wdchapter_fl_deletechapter"
        app:layout_constraintTop_toTopOf="@id/wdchapter_fl_readchapter" />

</androidx.constraintlayout.widget.ConstraintLayout>